<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Game">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/gameToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameToolbar" />

    <TextView
        android:id="@+id/repeatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameToolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text="@string/repeat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/gameToolbar"
        android:layout_marginTop="35dp"
        android:background="@drawable/red"
        android:foreground="@drawable/red" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/gameToolbar"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@id/redButton"
        android:background="@drawable/green"
        android:foreground="@drawable/green" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/redButton"
        android:background="@drawable/yellow"
        android:foreground="@drawable/yellow" />

    <Button
        android:id="@+id/blueButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/greenButton"
        android:layout_toEndOf="@id/yellowButton"
        android:background="@drawable/blue"
        android:foreground="@drawable/blue" />

    <Button
        android:id="@+id/pinkButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/yellowButton"
        android:background="@drawable/pink"
        android:foreground="@drawable/pink" />

    <Button
        android:id="@+id/purpleButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/blueButton"
        android:layout_toEndOf="@id/pinkButton"
        android:background="@drawable/purple"
        android:foreground="@drawable/purple" />

    <TextView
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/game_footer"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/stats"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <!--> Footer -->
    <RelativeLayout
        android:id="@+id/game_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/footer"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>